// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`demo: a CodeableReference extension as R4 concept/reference slices builds a valid workflow-reason extension 1`] = `
{
  "extension": [
    {
      "url": "http://hl7.org/fhir/StructureDefinition/_datatype",
      "valueString": "CodeableReference",
    },
    {
      "url": "concept",
      "valueCodeableConcept": {
        "coding": [
          {
            "code": "183460006",
            "display": "Caesarean section",
            "system": "http://snomed.info/sct",
          },
        ],
        "text": "Planned caesarean section",
      },
    },
  ],
  "url": "http://hl7.org/fhir/StructureDefinition/workflow-reason",
}
`;

exports[`demo: a CodeableReference extension as R4 concept/reference slices carries a reference instead, on the same extension 1`] = `
{
  "extension": [
    {
      "url": "http://hl7.org/fhir/StructureDefinition/_datatype",
      "valueString": "CodeableReference",
    },
    {
      "url": "reference",
      "valueReference": {
        "display": "Pre-eclampsia",
        "reference": "Condition/preeclampsia",
      },
    },
  ],
  "url": "http://hl7.org/fhir/StructureDefinition/workflow-reason",
}
`;

exports[`demo: an Availability extension as nested availableTime slices builds a valid extended-contact-availability extension 1`] = `
{
  "extension": [
    {
      "url": "http://hl7.org/fhir/StructureDefinition/_datatype",
      "valueString": "Availability",
    },
    {
      "extension": [
        {
          "url": "daysOfWeek",
          "valueCode": "mon",
        },
        {
          "url": "daysOfWeek",
          "valueCode": "wed",
        },
        {
          "url": "availableStartTime",
          "valueTime": "09:00:00",
        },
        {
          "url": "availableEndTime",
          "valueTime": "17:00:00",
        },
      ],
      "url": "availableTime",
    },
    {
      "extension": [
        {
          "url": "description",
          "valueString": "Public holidays",
        },
        {
          "url": "during",
          "valuePeriod": {
            "end": "2026-12-26",
            "start": "2026-12-24",
          },
        },
      ],
      "url": "notAvailableTime",
    },
  ],
  "url": "http://hl7.org/fhir/StructureDefinition/extended-contact-availability",
}
`;

exports[`generated modules pins the emitted workflow-reason module 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Extension } from "../../hl7-fhir-r4-core/Extension";
import type { Reference } from "../../hl7-fhir-r4-core/Reference";

import { DatatypeProfile } from "./Extension_Datatype";

import {
    isRawExtensionInput,
    applyFixedValue,
    applySliceMatch,
    matchesValue,
    setArraySlice,
    getArraySlice,
    ensureSliceDefaults,
    wrapSliceChoice,
    unwrapSliceChoice,
    isExtension,
    getExtensionValue,
    pushExtension,
    upsertExtension,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type WorkflowReason_Extension_ConceptSliceFlat = Omit<Extension, "url" | "value" | "valueBase64Binary" | "valueBoolean" | "valueCanonical" | "valueCode" | "valueDate" | "valueDateTime" | "valueDecimal" | "valueId" | "valueInstant" | "valueInteger" | "valueMarkdown" | "valueOid" | "valuePositiveInt" | "valueString" | "valueTime" | "valueUnsignedInt" | "valueUri" | "valueUrl" | "valueUuid" | "valueAddress" | "valueAge" | "valueAnnotation" | "valueAttachment" | "valueCodeableConcept" | "valueCoding" | "valueContactPoint" | "valueCount" | "valueDistance" | "valueDuration" | "valueHumanName" | "valueIdentifier" | "valueMoney" | "valuePeriod" | "valueQuantity" | "valueRange" | "valueRatio" | "valueReference" | "valueSampledData" | "valueSignature" | "valueTiming" | "valueContactDetail" | "valueContributor" | "valueDataRequirement" | "valueExpression" | "valueParameterDefinition" | "valueRelatedArtifact" | "valueTriggerDefinition" | "valueUsageContext" | "valueDosage" | "valueMeta"> & CodeableConcept;
export type WorkflowReason_Extension_ConceptSliceFlatAll = WorkflowReason_Extension_ConceptSliceFlat;

export type WorkflowReason_Extension_ReferenceSliceFlat = Omit<Extension, "url" | "value" | "valueBase64Binary" | "valueBoolean" | "valueCanonical" | "valueCode" | "valueDate" | "valueDateTime" | "valueDecimal" | "valueId" | "valueInstant" | "valueInteger" | "valueMarkdown" | "valueOid" | "valuePositiveInt" | "valueString" | "valueTime" | "valueUnsignedInt" | "valueUri" | "valueUrl" | "valueUuid" | "valueAddress" | "valueAge" | "valueAnnotation" | "valueAttachment" | "valueCodeableConcept" | "valueCoding" | "valueContactPoint" | "valueCount" | "valueDistance" | "valueDuration" | "valueHumanName" | "valueIdentifier" | "valueMoney" | "valuePeriod" | "valueQuantity" | "valueRange" | "valueRatio" | "valueReference" | "valueSampledData" | "valueSignature" | "valueTiming" | "valueContactDetail" | "valueContributor" | "valueDataRequirement" | "valueExpression" | "valueParameterDefinition" | "valueRelatedArtifact" | "valueTriggerDefinition" | "valueUsageContext" | "valueDosage" | "valueMeta"> & Reference;
export type WorkflowReason_Extension_ReferenceSliceFlatAll = WorkflowReason_Extension_ReferenceSliceFlat;

export type WorkflowReasonProfileRaw = {
    extension?: Extension[];
}

export type WorkflowReasonProfileFlat = {
    datatype: string;
    concept?: CodeableConcept;
    reference?: Reference;
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/workflow-reason (pkg: hl7.fhir.uv.extensions.r4#5.3.0)
export class WorkflowReasonProfile {
    static readonly canonicalUrl = "http://hl7.org/fhir/StructureDefinition/workflow-reason";

    private static readonly conceptSliceMatch: Record<string, unknown> = {"url":"concept"};
    private static readonly referenceSliceMatch: Record<string, unknown> = {"url":"reference"};

    private resource: Extension;

    constructor (resource: Extension) {
        this.resource = resource;
    }

    static from (resource: Extension) : WorkflowReasonProfile {
        const profile = new WorkflowReasonProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Extension {
        if (typeof resource !== "object" || resource === null) return false;
        return (resource as { url?: string }).url === WorkflowReasonProfile.canonicalUrl;
    }

    static apply (resource: Extension) : WorkflowReasonProfile {
        resource.url = WorkflowReasonProfile.canonicalUrl;
        applyFixedValue(resource, "url", WorkflowReasonProfile.canonicalUrl);
        return new WorkflowReasonProfile(resource);
    }

    private static resolveInput (args: WorkflowReasonProfileRaw | WorkflowReasonProfileFlat) : Extension[] {
        if (isRawExtensionInput<WorkflowReasonProfileRaw>(args)) {
            return args.extension ?? [];
        } else {
            const result: Extension[] = [];
            if (args.datatype !== undefined) {
                result.push({ url: "_datatype", valueString: args.datatype } as Extension);
            }
            if (args.concept !== undefined) {
                result.push({ url: "concept", valueCodeableConcept: args.concept } as Extension);
            }
            if (args.reference !== undefined) {
                result.push({ url: "reference", valueReference: args.reference } as Extension);
            }
            return result;
        }
    }

    static createResource (args: WorkflowReasonProfileRaw | WorkflowReasonProfileFlat) : Extension {
        const resolvedExtensions = WorkflowReasonProfile.resolveInput(args);

        const resource: Extension = {
            url: WorkflowReasonProfile.canonicalUrl,
            extension: resolvedExtensions,
        }
        return resource;
    }

    static create (args: WorkflowReasonProfileRaw | WorkflowReasonProfileFlat) : WorkflowReasonProfile {
        return WorkflowReasonProfile.apply(WorkflowReasonProfile.createResource(args));
    }

    toResource () : Extension {
        return this.resource;
    }

    // Field accessors
    getUrl () : string | undefined {
        return this.resource.url as string | undefined;
    }

    // Extensions
    public setDatatype (value: DatatypeProfile | Extension | string): this {
        if (value instanceof DatatypeProfile) {
            upsertExtension(this.resource, value.toResource())
        } else if (isExtension(value)) {
            if (value.url !== "http://hl7.org/fhir/StructureDefinition/_datatype") throw new Error(\`Expected extension url 'http://hl7.org/fhir/StructureDefinition/_datatype', got '\${value.url}'\`)
            upsertExtension(this.resource, value)
        } else {
            upsertExtension(this.resource, DatatypeProfile.createResource({ valueString: value as string }))
        }
        return this
    }

    public getDatatype(mode: 'flat'): string | undefined;
    public getDatatype(mode: 'profile'): DatatypeProfile | undefined;
    public getDatatype(mode: 'raw'): Extension | undefined;
    public getDatatype(): string | undefined;
    public getDatatype (mode: 'flat' | 'profile' | 'raw' = 'flat'): string | DatatypeProfile | Extension | undefined {
        const ext = this.resource.extension?.find(e => e.url === "http://hl7.org/fhir/StructureDefinition/_datatype")
        if (!ext) return undefined
        if (mode === 'raw') return ext
        if (mode === 'profile') return DatatypeProfile.apply(ext)
        return getExtensionValue<string>(ext, "valueString")
    }

    public setConcept (value: Omit<Extension, "url"> | Extension): this {
        if (isExtension(value)) {
            if (value.url !== "concept") throw new Error(\`Expected extension url 'concept', got '\${value.url}'\`)
            upsertExtension(this.resource, value)
        } else {
            upsertExtension(this.resource, { url: "concept", ...value } as Extension)
        }
        return this
    }

    public getConcept (): Extension | undefined {
        return this.resource.extension?.find(e => e.url === "concept")
    }

    public setReference (value: Omit<Extension, "url"> | Extension): this {
        if (isExtension(value)) {
            if (value.url !== "reference") throw new Error(\`Expected extension url 'reference', got '\${value.url}'\`)
            upsertExtension(this.resource, value)
        } else {
            upsertExtension(this.resource, { url: "reference", ...value } as Extension)
        }
        return this
    }

    public getReference (): Extension | undefined {
        return this.resource.extension?.find(e => e.url === "reference")
    }

    // Slices
    public setExtensionConcept (input?: WorkflowReason_Extension_ConceptSliceFlat | Extension): this {
        const match = WorkflowReasonProfile.conceptSliceMatch
        if (input && matchesValue(input, match)) {
            setArraySlice(this.resource.extension ??= [], match, input as Extension)
            return this
        }
        const wrapped = wrapSliceChoice<Extension>(input ?? {}, "valueCodeableConcept")
        const value = applySliceMatch<Extension>(wrapped, match)
        setArraySlice(this.resource.extension ??= [], match, value)
        return this
    }

    public setExtensionReference (input?: WorkflowReason_Extension_ReferenceSliceFlat | Extension): this {
        const match = WorkflowReasonProfile.referenceSliceMatch
        if (input && matchesValue(input, match)) {
            setArraySlice(this.resource.extension ??= [], match, input as Extension)
            return this
        }
        const wrapped = wrapSliceChoice<Extension>(input ?? {}, "valueReference")
        const value = applySliceMatch<Extension>(wrapped, match)
        setArraySlice(this.resource.extension ??= [], match, value)
        return this
    }

    public getExtensionConcept(mode: 'flat'): WorkflowReason_Extension_ConceptSliceFlatAll | undefined;
    public getExtensionConcept(mode: 'raw'): Extension | undefined;
    public getExtensionConcept(): WorkflowReason_Extension_ConceptSliceFlatAll | undefined;
    public getExtensionConcept (mode: 'flat' | 'raw' = 'flat'): WorkflowReason_Extension_ConceptSliceFlatAll | Extension | undefined {
        const match = WorkflowReasonProfile.conceptSliceMatch
        const item = getArraySlice(this.resource.extension, match)
        if (!item) return undefined
        if (mode === 'raw') return item
        return unwrapSliceChoice<WorkflowReason_Extension_ConceptSliceFlatAll>(item, ["url"], "valueCodeableConcept")
    }

    public getExtensionReference(mode: 'flat'): WorkflowReason_Extension_ReferenceSliceFlatAll | undefined;
    public getExtensionReference(mode: 'raw'): Extension | undefined;
    public getExtensionReference(): WorkflowReason_Extension_ReferenceSliceFlatAll | undefined;
    public getExtensionReference (mode: 'flat' | 'raw' = 'flat'): WorkflowReason_Extension_ReferenceSliceFlatAll | Extension | undefined {
        const match = WorkflowReasonProfile.referenceSliceMatch
        const item = getArraySlice(this.resource.extension, match)
        if (!item) return undefined
        if (mode === 'raw') return item
        return unwrapSliceChoice<WorkflowReason_Extension_ReferenceSliceFlatAll>(item, ["url"], "valueReference")
    }

    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "WorkflowReason"
        const res = this.resource
        return {
            errors: [
                ...validateSliceCardinality(res, profileName, "extension", {"url":"concept"}, "concept", 0, 1),
                ...validateSliceFields(res, profileName, "extension", {"url":"concept"}, "concept", [], [["valueCodeableConcept"]]),
                ...validateSliceCardinality(res, profileName, "extension", {"url":"reference"}, "reference", 0, 1),
                ...validateSliceFields(res, profileName, "extension", {"url":"reference"}, "reference", [], [["valueReference"]]),
                ...validateRequired(res, profileName, "url"),
                ...validateFixedValue(res, profileName, "url", WorkflowReasonProfile.canonicalUrl),
            ],
            warnings: [],
        }
    }

}

"
`;

exports[`generated modules pins the emitted extended-contact-availability module 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { Extension } from "../../hl7-fhir-r4-core/Extension";

import { DatatypeProfile } from "./Extension_Datatype";

import {
    isRawExtensionInput,
    applyFixedValue,
    applySliceMatch,
    matchesValue,
    setArraySlice,
    getArraySlice,
    ensureSliceDefaults,
    setArraySliceAll,
    getArraySliceAll,
    isExtension,
    getExtensionValue,
    pushExtension,
    upsertExtension,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type ExtendedContactAvailability_Extension_AvailableTimeSliceFlat = Omit<Extension, "url">;
export type ExtendedContactAvailability_Extension_AvailableTimeSliceFlatAll = ExtendedContactAvailability_Extension_AvailableTimeSliceFlat & {
    readonly url: "availableTime";
}

export type ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlat = Omit<Extension, "url">;
export type ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlatAll = ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlat & {
    readonly url: "notAvailableTime";
}

export type ExtendedContactAvailabilityProfileRaw = {
    extension?: Extension[];
}

export type ExtendedContactAvailabilityProfileFlat = {
    datatype: string;
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/extended-contact-availability (pkg: hl7.fhir.uv.extensions.r4#5.3.0)
export class ExtendedContactAvailabilityProfile {
    static readonly canonicalUrl = "http://hl7.org/fhir/StructureDefinition/extended-contact-availability";

    private static readonly availableTimeSliceMatch: Record<string, unknown> = {"url":"availableTime"};
    private static readonly notAvailableTimeSliceMatch: Record<string, unknown> = {"url":"notAvailableTime"};

    private resource: Extension;

    constructor (resource: Extension) {
        this.resource = resource;
    }

    static from (resource: Extension) : ExtendedContactAvailabilityProfile {
        const profile = new ExtendedContactAvailabilityProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Extension {
        if (typeof resource !== "object" || resource === null) return false;
        return (resource as { url?: string }).url === ExtendedContactAvailabilityProfile.canonicalUrl;
    }

    static apply (resource: Extension) : ExtendedContactAvailabilityProfile {
        resource.url = ExtendedContactAvailabilityProfile.canonicalUrl;
        applyFixedValue(resource, "url", ExtendedContactAvailabilityProfile.canonicalUrl);
        return new ExtendedContactAvailabilityProfile(resource);
    }

    private static resolveInput (args: ExtendedContactAvailabilityProfileRaw | ExtendedContactAvailabilityProfileFlat) : Extension[] {
        if (isRawExtensionInput<ExtendedContactAvailabilityProfileRaw>(args)) {
            return args.extension ?? [];
        } else {
            const result: Extension[] = [];
            if (args.datatype !== undefined) {
                result.push({ url: "_datatype", valueString: args.datatype } as Extension);
            }
            return result;
        }
    }

    static createResource (args: ExtendedContactAvailabilityProfileRaw | ExtendedContactAvailabilityProfileFlat) : Extension {
        const resolvedExtensions = ExtendedContactAvailabilityProfile.resolveInput(args);

        const resource: Extension = {
            url: ExtendedContactAvailabilityProfile.canonicalUrl,
            extension: resolvedExtensions,
        }
        return resource;
    }

    static create (args: ExtendedContactAvailabilityProfileRaw | ExtendedContactAvailabilityProfileFlat) : ExtendedContactAvailabilityProfile {
        return ExtendedContactAvailabilityProfile.apply(ExtendedContactAvailabilityProfile.createResource(args));
    }

    toResource () : Extension {
        return this.resource;
    }

    // Field accessors
    getUrl () : string | undefined {
        return this.resource.url as string | undefined;
    }

    // Extensions
    public setDatatype (value: DatatypeProfile | Extension | string): this {
        if (value instanceof DatatypeProfile) {
            upsertExtension(this.resource, value.toResource())
        } else if (isExtension(value)) {
            if (value.url !== "http://hl7.org/fhir/StructureDefinition/_datatype") throw new Error(\`Expected extension url 'http://hl7.org/fhir/StructureDefinition/_datatype', got '\${value.url}'\`)
            upsertExtension(this.resource, value)
        } else {
            upsertExtension(this.resource, DatatypeProfile.createResource({ valueString: value as string }))
        }
        return this
    }

    public getDatatype(mode: 'flat'): string | undefined;
    public getDatatype(mode: 'profile'): DatatypeProfile | undefined;
    public getDatatype(mode: 'raw'): Extension | undefined;
    public getDatatype(): string | undefined;
    public getDatatype (mode: 'flat' | 'profile' | 'raw' = 'flat'): string | DatatypeProfile | Extension | undefined {
        const ext = this.resource.extension?.find(e => e.url === "http://hl7.org/fhir/StructureDefinition/_datatype")
        if (!ext) return undefined
        if (mode === 'raw') return ext
        if (mode === 'profile') return DatatypeProfile.apply(ext)
        return getExtensionValue<string>(ext, "valueString")
    }

    public setAvailableTime (value: Omit<Extension, "url"> | Extension): this {
        if (isExtension(value)) {
            if (value.url !== "availableTime") throw new Error(\`Expected extension url 'availableTime', got '\${value.url}'\`)
            pushExtension(this.resource, value)
        } else {
            pushExtension(this.resource, { url: "availableTime", ...value } as Extension)
        }
        return this
    }

    public getAvailableTime (): Extension | undefined {
        return this.resource.extension?.find(e => e.url === "availableTime")
    }

    public setNotAvailableTime (value: Omit<Extension, "url"> | Extension): this {
        if (isExtension(value)) {
            if (value.url !== "notAvailableTime") throw new Error(\`Expected extension url 'notAvailableTime', got '\${value.url}'\`)
            pushExtension(this.resource, value)
        } else {
            pushExtension(this.resource, { url: "notAvailableTime", ...value } as Extension)
        }
        return this
    }

    public getNotAvailableTime (): Extension | undefined {
        return this.resource.extension?.find(e => e.url === "notAvailableTime")
    }

    // Slices
    public setExtensionAvailableTime (input: (ExtendedContactAvailability_Extension_AvailableTimeSliceFlat | Extension)[]): this {
        const match = ExtendedContactAvailabilityProfile.availableTimeSliceMatch
        const arr = this.resource.extension ??= []
        const values = input.map(item => matchesValue(item, match) ? item as Extension : applySliceMatch<Extension>(item, match))
        setArraySliceAll(arr, match, values)
        return this
    }

    public setExtensionNotAvailableTime (input: (ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlat | Extension)[]): this {
        const match = ExtendedContactAvailabilityProfile.notAvailableTimeSliceMatch
        const arr = this.resource.extension ??= []
        const values = input.map(item => matchesValue(item, match) ? item as Extension : applySliceMatch<Extension>(item, match))
        setArraySliceAll(arr, match, values)
        return this
    }

    public getExtensionAvailableTime(mode: 'flat'): ExtendedContactAvailability_Extension_AvailableTimeSliceFlatAll[] | undefined;
    public getExtensionAvailableTime(mode: 'raw'): Extension[] | undefined;
    public getExtensionAvailableTime(): ExtendedContactAvailability_Extension_AvailableTimeSliceFlatAll[] | undefined;
    public getExtensionAvailableTime (mode: 'flat' | 'raw' = 'flat'): (ExtendedContactAvailability_Extension_AvailableTimeSliceFlatAll | Extension)[] | undefined {
        const match = ExtendedContactAvailabilityProfile.availableTimeSliceMatch
        const items = getArraySliceAll(this.resource.extension, match)
        if (items.length === 0) return undefined
        if (mode === 'raw') return items
        return items as unknown as ExtendedContactAvailability_Extension_AvailableTimeSliceFlatAll[]
    }

    public getExtensionNotAvailableTime(mode: 'flat'): ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlatAll[] | undefined;
    public getExtensionNotAvailableTime(mode: 'raw'): Extension[] | undefined;
    public getExtensionNotAvailableTime(): ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlatAll[] | undefined;
    public getExtensionNotAvailableTime (mode: 'flat' | 'raw' = 'flat'): (ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlatAll | Extension)[] | undefined {
        const match = ExtendedContactAvailabilityProfile.notAvailableTimeSliceMatch
        const items = getArraySliceAll(this.resource.extension, match)
        if (items.length === 0) return undefined
        if (mode === 'raw') return items
        return items as unknown as ExtendedContactAvailability_Extension_NotAvailableTimeSliceFlatAll[]
    }

    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "ExtendedContactAvailability"
        const res = this.resource
        return {
            errors: [
                ...validateRequired(res, profileName, "url"),
                ...validateFixedValue(res, profileName, "url", ExtendedContactAvailabilityProfile.canonicalUrl),
            ],
            warnings: [],
        }
    }

}

"
`;
